--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
+    "graphql": "^15.7.2",
+    "html-react-parser": "^1.4.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
